resources/app-sre/observatorium-metrics-production/observatorium-alertmanager-production.route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
    haproxy.router.openshift.io/balance: source
    haproxy.router.openshift.io/timeout: 5m
  labels:
    app: observatorium-alertmanager
  name: observatorium-alertmanager
spec:
  host: observatorium-alertmanager.api.openshift.com
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: observatorium-alertmanager
    weight: 100
  wildcardPolicy: None
