resources/app-sre/observatorium-metrics-production/observatorium-thanos-compact.route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
  labels:
    app: observatorium-thanos-compact
  name: observatorium-thanos-compact
spec:
  host: observatorium-thanos-compact.api.openshift.com
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: observatorium-thanos-compact
    weight: 100
  wildcardPolicy: None
